# GuardianVault

./: .gitignore  AI_CONTEXT.md  BITCOIN_ADDRESS_FIX.md  CHANGELOG_ETHEREUM.md  CLAUDE.md  DEVELOPMENT.md  INSTALL.md  LICENSE  PROJECT_ORGANIZATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STATUS.md  TESTING_SUMMARY.md  complete_mpc_workflow.py  crypto_mpc_keymanager.py  docker-compose.regtest.yml  enhanced_crypto_mpc.py  mpc_cli.py  mpc_workflow_example.py  pyproject.toml  requirements.txt  threshold_addresses.py  threshold_mpc_keymanager.py  threshold_signing.py
coordination-server/: .env.example  README.md  pyproject.toml  requirements.txt  run_server.sh
coordination-server/app/: config.py  database.py  main.py
coordination-server/app/models/: guardian.py  transaction.py  vault.py
coordination-server/app/routers/: guardians.py  transactions.py  vaults.py
coordination-server/app/services/: mpc_coordinator.py
coordination-server/app/websocket/: signing_protocol.py
docs/: ARCHITECTURE.md  ARCHITECTURE_MPC.md  ARCHITECTURE_THRESHOLD.md  BITCOIN_REGTEST_INTEGRATION.md  CLAUDE.md  ETHEREUM_IMPLEMENTATION.md  GUARDIAN_APP_IMPLEMENTATION.md  MPC_ADDITIVE_SECRET_SHARING.md  PROJECT_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_ANALYSIS.md  UI_ARCHITECTURE.md  bitcoin-regtest-integration.md
examples/: README.md  bitcoin_networks_demo.py  bitcoin_regtest_test.py  bitcoin_regtest_test_auto.py  complete_mpc_workflow.py  frost_complete_workflow.py  mpc_cli.py  mpc_workflow_example.py  verify_bitcoin_address.py
guardian-app/: .gitignore  README.md  TESTING_GUIDE.md  electron.vite.config.ts  index.html  package.json  test_guardian1_keyshare.json  tsconfig.json  tsconfig.node.json
guardian-app/python/: crypto_ops.py
guardian-app/src/main/: crypto-bridge.ts  index.ts  keystore.ts  session.ts
guardian-app/src/preload/: index.ts
guardian-app/src/renderer/: App.tsx
guardian-app/src/renderer/components/Setup/: ImportKey.tsx
guardianvault/: README.md  __init__.py  bitcoin_transaction.py  enhanced_crypto_mpc.py  ethereum_rpc.py  ethereum_transaction.py  mpc_addresses.py  mpc_keymanager.py  mpc_signing.py  rlp_encoding.py  threshold_addresses.py  threshold_frost.py  threshold_signing.py
practical_demo/: .gitignore  ADDRESS_GENERATION.md  BITCOIN_ADDRESS_TYPES.md  DEMO_CHEATSHEET.md  DEMO_GUIDE.md  ETHEREUM_QUICKSTART.md  NEW_FEATURES.md  QUICK_START.md  README.md  SIGNATURE_FIX.md  cli_admin.py  cli_broadcast_transaction.py  cli_create_and_broadcast.py  cli_create_ethereum_transaction.py  cli_fund_address.py  cli_generate_address.py  cli_guardian_client.py  cli_share_generator.py  cli_transaction_requester.py  compare_p2wpkh.py  debug_signature.py  demo_orchestrator.py  fund_ethereum_address.py  pyproject.toml  quick_start.sh  requirements.txt  setup_regtest.py  start_guardians.sh  test_ethereum_implementation.py  test_p2wpkh.py  test_signature_flow.py  verify_account_shares.py  verify_key_derivation.py  verify_mpc_signature.py
practical_demo/utils/: __init__.py  bitcoin_rpc.py  ethereum_rpc.py
scripts/: run_bitcoin_regtest.sh
tests/: debug_transaction.py  test_coordination_server.py
todo/: 01-GUARDIAN-APP.md  02-SECURITY.md  03-BLOCKCHAIN.md  04-ADMIN-DASHBOARD.md  05-MOBILE.md  99-FUTURE-ENHANCEMENTS.md  README.md
