[project]
name = "practical-demo"
version = "0.1.0"
description = "GuardianVault Practical Demo"
authors = [
    {name = "Ivan Oudkerk",email = "ioudkerk@example.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "aiohttp (>=3.9.0)",
    "requests (>=2.31.0)",
    "python-socketio[asyncio-client] (>=5.10.0)",
    "pyyaml (>=6.0.1)",
    "ecdsa (>=0.18.0)",
    "base58 (>=2.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
